@@ -11,19 +11,19 @@
 #define ITS_FACONV  printf("### WARNING: False convergence!\n")
 
 //! Warning for solution close to zero
-#define ITS_ZEROSOL printf("### WARNING: Iteration stopped due to the solution is almost zero! %s : %d\n", __FILE__, __LINE__)
+#define ITS_ZEROSOL printf("### WARNING: Iteration stopped due to the solution is almost zero! %s : %d\n", __FUNCTION__, __LINE__)
 
 //! Warning for iteration restarted
-#define ITS_RESTART printf("### WARNING: Iteration restarted due to stagnation! %s : %d\n", __FILE__, __LINE__)
+#define ITS_RESTART printf("### WARNING: Iteration restarted due to stagnation! %s : %d\n", __FUNCTION__, __LINE__)
 
 //! Warning for stagged iteration
-#define ITS_STAGGED printf("### WARNING: Iteration stopped due to staggnation! %s : %d\n", __FILE__, __LINE__)
+#define ITS_STAGGED printf("### WARNING: Iteration stopped due to staggnation! %s : %d\n", __FUNCTION__, __LINE__)
 
 //! Warning for tolerance practically close to zero
-#define ITS_ZEROTOL printf("### WARNING: The tolerence might be too small! %s : %d\n", __FILE__, __LINE__)
+#define ITS_ZEROTOL printf("### WARNING: The tolerence might be too small! %s : %d\n", __FUNCTION__, __LINE__)
 
 //! Warning for divided by zero
-#define ITS_DIVZERO printf("### WARNING: Divided by zero! %s : %d\n", __FILE__, __LINE__)
+#define ITS_DIVZERO printf("### WARNING: Divided by zero! %s : %d\n", __FUNCTION__, __LINE__)
 
 //! Warning for actual relative residual
 #define ITS_REALRES(relres) printf("### WARNING: The actual relative residual = %e!\n",(relres))
@@ -32,7 +32,7 @@
 #define ITS_COMPRES(relres) printf("### WARNING: The computed relative residual = %e!\n",(relres))
 
 //! Warning for too small sp 
-#define ITS_SMALLSP printf("### WARNING: sp is too small! %s : %d\n", __FILE__, __LINE__)
+#define ITS_SMALLSP printf("### WARNING: sp is too small! %s : %d\n", __FUNCTION__, __LINE__)
 
 //! Warning for restore previous iteration 
 #define ITS_RESTORE(iter) printf("### WARNING: Restore iteration %d!",(iter));
